--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Resend confirmation instructions</h2>
+<h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+  <div class="form-group">
+    <%= f.input :email, required: true, autofocus: true, input_html: { class: 'form-control' } %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
+  <div class="form-group">
+    <%= f.input :password, required: true, input_html: { class: 'form-control' } %>
   </div>
+  <div class="form-group">
+    <%= f.input :password_confirmation, required: true, input_html: { class: 'form-control' } %>
+  </div>
+  <%= f.button :submit, "Sign up", class: "btn btn-default" %>
 <% end %>
 
 <%= render "devise/shared/links" %>
