--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Post</h1>
+<h2>New post</h2>
+<div class="row">
+  <div class='col-md-12'>
+    <p style='text-align:right;'>
+      created by <%= current_user.email %>, Current Time : <%= Time.now %>
+    </p>
+  </div>
+</div>
+<%= render 'form' %>
 
-<%= render 'form', post: @post %>
-
-<%= link_to 'Back', posts_path %>
+<hr>
+<%= link_to 'Back', posts_path, class: "btn btn-default" %>
