--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     <div class="navbar-collapse collapse">
   <ul class="nav navbar-nav">
     <li class="active"><%= link_to "Home", root_path %></li>
-    <li><%= link_to "Posts", "#" %></li>
+    <li><%= link_to "Posts", posts_path %></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
