--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,5 @@
-<h2>New post</h2>
-<div class="row">
-  <div class='col-md-12'>
-    <p style='text-align:right;'>
-      created by <%= current_user.email %>, Current Time : <%= Time.now %>
-    </p>
-  </div>
-</div>
-<%= render 'form' %>
-
-<hr>
-<%= link_to 'Back', posts_path, class: "btn btn-default" %>
+<%= simple_form_for @post do |f| %>
+	<%= f.input :image %>
+	<%= f.input :content %>
+	<%= f.button :submit %>
+<% end %>
