데일리로그 다듬기 전

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,13 +1,16 @@
-
-
-<%= simple_form_for(@post) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-group">
-    <%= f.input :content, input_html: { class: 'form-control' } %>
-  </div>
-
-
-  <%= f.button :submit, class: 'btn btn-default'%>
-
-<% end %>
+<div class="text-center">
+  <%= image_tag @post.image.url(:medium) %>
+</div>
+<div class="form-wrapper">
+  <%= simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f| %>
+    <div class="form-group">
+      <%= f.input :image %>
+    </div>
+    <div class="form-group text-center">
+      <%= f.input :content %>
+    </div>
+    <div class="form-group text-center">
+      <%= f.button :submit, class: 'btn-success' %>
+    </div>
+  <% end %>
+</div>
