--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -11,3 +11,9 @@
 <hr>
 <%= link_to 'Show', @post, class: 'btn btn-default' %>
 <%= link_to 'Back', posts_path, class: 'btn btn-default' %>
+
+<div class="text-center edit-links">
+  <%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
+  |
+  <%= link_to "cancel", posts_path %>
+</div>
