--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@ img {
 @import "posts";
 
 body {  
-  background-color: #fafafa;
+  background-color: #FFFFFF;
   font-family: proxima-nova, 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
