--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,14 +26,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#"><img src="/assets/drizzle.png" width="40" height="40" /></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="navbar-collapse collapse">
   <ul class="nav navbar-nav">
-    <li class="active"><%= link_to "Home", root_path %></li>
-    <li><%= link_to "Posts", posts_path %></li>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "이슬비", "#" %></li>
+    <li><%= link_to "가랑비", posts_path %></li>
+    <li><%= link_to "장대비", "#" %></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
@@ -41,7 +43,7 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><%= link_to "My Profile", edit_user_registration_path %></li>
-          <li><%= link_to "Roles : " + user_roles(current_user), '#' %></li>
+          <li><%= link_to "Roles : " + user_roles(current_user), '#' %></li>d
           <li><%= link_to "Sign out", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %></li>
         </ul>
       </li>
