--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,11 @@
   <%= f.error_notification %>
 
   <div class="form-group">
+    <%= f.input :name, required: true, autofocus: true, input_html: { class: 'form-control' } %>
+
+  <div class="form-group">
     <%= f.input :email, required: true, autofocus: true, input_html: { class: 'form-control' } %>
+
   </div>
   <div class="form-group">
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -26,8 +30,6 @@
 
 <hr>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<h5> <%= link_to "회원탈퇴", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></h5>
 
 <%= link_to "Back", :back, class: "btn btn-default" %>
