이름 추가 완료!

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
     <div class="post">
       <div class="post-head">
         <div class="name">
-#          <%= post.user.name %>
+          <%= post.user.name %>
         </div>
       </div>
       <div class="image center-block">
