이름 및 작성시간 표시

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,9 @@
       <p class="content">
         <%= post.content %>
       </p>
+      <p style='text-align:right;'>
+      created by <%= post.user.name %>, <%= time_ago_in_words(post.created_at) %> ago
+    </p>
     </div>
   <% end %>
 </div>
