--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,19 +1,17 @@
-<h2>Editing post </h2>
+<center>
+<h2>수정하기</h2>
 <div class="row">
   <div class='col-md-12'>
     <p style='text-align:right;'>
-      created by <%= current_user.email %>, <%= time_ago_in_words(@post.created_at) %> ago
+      created by <%= current_user.name %>, <%= time_ago_in_words(@post.created_at) %> ago
     </p>
   </div>
 </div>
 <%= render 'form' %>
 
 <hr>
-<%= link_to 'Show', @post, class: 'btn btn-default' %>
-<%= link_to 'Back', posts_path, class: 'btn btn-default' %>
-
 <div class="text-center edit-links">
   <%= link_to "Delete Post", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?" } %>
   |
-  <%= link_to "cancel", posts_path %>
+  <%= link_to "back", posts_path %>
 </div>
