후기 페이지 만들기

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "이슬비", "#" %></li>
     <li><%= link_to "가랑비", posts_path %></li>
-    <li><%= link_to "장대비", "#" %></li>
+    <li><%= link_to "장대비", review_path %></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
