--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,11 @@
+
 <center>
+	<div style="font-size: 0;">
+	     <div class="inline_block"></div>
+	     <img class="index_image" src="/assets/welcome.index.white.png"/>
+	</div>
 
-<div >
-    <img class="index_image" src="/assets/welcome.index.jpg" />
-</div>
+	<div class="hotpink"></div>
 
-<div class="hotpink"></div>
+
 </center>
